require explicit configuration of mathjax

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,10 @@
 <!-- Webfonts -->
 <script src="//use.edgefonts.net/source-sans-pro:n2,i2,n3,i3,n4,i4,n6,i6,n7,i7,n9,i9;source-code-pro:n4,n7;volkhov.js"></script>
 <!-- MathJax -->
-<script type="text/javascript"
+{% if page.mathjax %}
+<script type="text/javascript" async="true"
    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+{% endif %}
 
 <meta http-equiv="cleartype" content="on">
 
